[package]
name = "natty-clicker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
config = "0.13.3"
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
serde = "1.0.171"
x11 = { version = "2.21.0", features = ["xlib"] }
xcb = { version = "1.2.1", features = ["xinput", "xtest", "xlib_xcb"] }
